# voice_eq_bot

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  requirements.txt  setup.cfg
voice_eq_bot/: __init__.py  __main__.py  measurement.py  signal_handler.py
