[metadata]
name = discord-voice-equalizer-bot
author = "OdielDomanie"
version = 0.1
description = Discord bot that measures audio loudness levels of users.
# url = https://github.com/OdielDomanie/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX

[options]
python_requires = >=3.10
install_requires =
    discord.py>=2.0
    python-dotenv
    pyloudnorm

[options.packages.find]
where = voice_eq_bot
